# git-archaeologist

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/git_archaeologist/: __init__.py  analyzer.py  cli.py  formatters.py  git_history.py  llm_client.py  models.py
tests/: test_analyzer.py  test_git_history.py
